--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">魅思视频</string>
-    <!--<string name="app_name">小蜜视频</string>-->
+<!--    <string name="app_name">云视界</string>-->
 </resources>
